<resources>
    <string name="app_name">Crypto Zee</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="alerts">Alerts</string>
    <string name="Wallet">Wallet</string>
    <string name="fav">Favourite</string>
    <string name="Market">Market</string>
    <string name="Coin_Market">Coin Market</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_of_coin">Image Of Coin</string>
    <string name="in_24_hours">In 24 hours</string>
    <string name="search">Search</string>
    <string name="enter_coin_name_symbol">Enter Coin Name / Symbol</string>
    <string name="Favourite">Favourite</string>
    <string name="n_a">N/A</string>
    <string name="market_cap">Market Cap</string>
    <string name="name">Name</string>
    <string name="symbol">Symbol</string>
    <string name="website">Website</string>
    <string name="explore">Explore</string>
    <string name="total_supply">Total Supply</string>
    <string name="circulating_supply">Circulating Supply</string>
    <string name="rank">Rank</string>
    <string name="all">All</string>
    <string name="_1y">1Y</string>
    <string name="_1m">1M</string>
    <string name="_1w">1W</string>
    <string name="_1d">1D</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="welcome">WELCOME</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="total_balance">Total Balance</string>
    <string name="_1000_00">$10,000</string>
    <string name="sell">SELL</string>
    <string name="zeroValue">0.00</string>
    <string name="balance">Balance -</string>
    <string name="available">Available -</string>
    <string name="nothing_in_favourite">Nothing in Favourite</string>
    <string name="add_coin">Add Coin</string>
    <string name="add_coins_in_wallet">Add Coins In Wallet</string>
    <string name="no_coin_found">No Coin Found</string>
    <string name="coins">Coins</string>
    <string name="buy_coin">Buy Coin</string>
</resources>