<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/homeFragment"
    android:icon="@drawable/home_24"
    android:title="@string/home"
    />

    <item
        android:id="@+id/newsFragment"
        android:icon="@drawable/icons8_news"
        android:title="@string/news"
        />
    <item
        android:id="@+id/favouriteFragment"
        android:icon="@drawable/favorite"
        android:title="@string/Favourite"
        />
    <item
        android:id="@+id/walletFragment"
        android:icon="@drawable/icons8_wallet"
        android:title="@string/Wallet"
        />
    <item
        android:id="@+id/alertFragment"
        android:icon="@drawable/ic_baseline_notifications_active_24"
        android:title="@string/alerts"
        />


</menu>